--- a/HousingApp/src/app/details/details.component.html
+++ b/HousingApp/src/app/details/details.component.html
@@ -16,7 +16,7 @@
 
     <section class="listing-apply">
       <h2 class="section-heading">Apply Now to live here</h2>
-      <form [formGroup] = "appplyForm" (submit)="submitApplication" >
+      <form [formGroup] = "appplyForm" (submit)="submitApplication()" >
 
         <label for="first-name">First Name</label>
         <input id="first-name" type="text" formControlName="firstName" autocomplete="on">
