--- a/angular-tour-of-heroes/src/app/hero-detail/hero-detail.component.html
+++ b/angular-tour-of-heroes/src/app/hero-detail/hero-detail.component.html
@@ -1,9 +1,9 @@
 <div *ngIf="hero">
-    <h2>{{hero.name | uppercase}} Details</h2>
-    <div>{{hero.id}}</div>
-    <div>
-      <label for="Hero-Name">Hero Name: </label>
-      <input id="name" placeholder="name" [(ngModel)]="hero.name">
-    </div>
+  <h2>{{hero.name | uppercase}} Details</h2>
+  <div><span>id: </span>{{hero.id}}</div>
+  <div>
+    <label for="hero-name">Hero name: </label>
+    <input id="hero-name" [(ngModel)]="hero.name" placeholder="Hero name"/>
+  </div>
+  <button type="button" (click)="goBack()">go back</button>
 </div>
-
